--- a/site.html
+++ b/site.html
@@ -13,9 +13,10 @@
 
     <nav>
 
-      <img src="hamburger.svg" alt="Hamburgueria Logo" width="100">
+      <img src="./images/hamburger.svg" alt="Hamburgueria Logo" width="100">
 
       <div>
+
         <h1> Hamburgueria </h1>
 
         <ul>
@@ -25,6 +26,7 @@
           <li> <a> Enquete </a> </li>
 
         </ul>
+
       </div>
 
     </nav>
