+ imagens adicionadas + header

--- a/site.html
+++ b/site.html
@@ -13,23 +13,23 @@
 
     <nav>
 
-      <img src="./images/hamburger.svg" alt="Hamburgueria Logo" width="100">
+      <ul class="menu">
 
-      <div>
+        <li> <a> Home </a> </li>
+        <li> <a> Cardápio </a> </li>
+        <li> <img src="images/hamburger.svg" alt="Hamburgueria Logo" width="50"> </li>
+        <li> <a> Nossas Lojas </a> </li>
+        <li> <a> Contato </a> </li>
 
-        <h1> Hamburgueria </h1>
-
-        <ul>
-
-          <li> <a> Home </a> </li>
-          <li> <a> Cardápio </a> </li>
-          <li> <a> Enquete </a> </li>
-
-        </ul>
-
-      </div>
+      </ul>
 
     </nav>
+
+    <header>
+
+      <img src="images/burgerbackground.jpeg" alt="Burger Background" width="100%">
+
+    </header>
 
     <section>
 
