+ imagens + parallax + cardapio/lojas/contato

--- a/site.html
+++ b/site.html
@@ -4,8 +4,10 @@
   <head>
 
     <meta charset="utf-8">
-    <title> Hamburgueria </title>
+    <title> BitBurger </title>
     <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Noticia+Text:700">
+    <link rel="icon" href="images/hamburger.png">
 
   </head>
 
@@ -25,12 +27,37 @@
 
     </nav>
 
-    <header>
 
-      <img src="images/burgerbackground.jpeg" alt="Burger Background" width="100%">
+    <header class="header">
+      <br><br><br><br>
+      <h1> BITBURGER™</h1>
+      <h4> "A melhor hamburgeria do Rio de Janeiro!" - Minha mãe</h4>
 
     </header>
 
+    <section class="cardapio">
+
+      <div class="titulocontainer">
+
+        <h1 class="subtitulo"> Cardápio </h1>
+        <h4 class="legenda"> Coma com moderação, se você conseguir </h4>
+
+      </div>
+
+
+    </section>
+
+    <section class="lojas">
+
+      <div class="titulocontainer">
+
+        <h1 class="subtitulo"> Nossas lojas </h1>
+        <h4 class="legenda"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. </h4>
+
+      </div>
+
+    </section>
+<!--
     <section>
 
       <table border="1">
@@ -58,10 +85,10 @@
 
             <ul>
 
-              <li> Pão </li>
-              <li> Frango </li>
-              <li> Alface </li>
-              <li> Cenoura </li>
+              <li class="ingredientes"> Pão </li>
+              <li class="ingredientes"> Frango </li>
+              <li class="ingredientes"> Alface </li>
+              <li class="ingredientes"> Cenoura </li>
 
             </ul>
 
@@ -90,12 +117,12 @@
 
             <ul>
 
-              <li> Pão </li>
-              <li> Carne </li>
-              <li> Queijo </li>
-              <li> Ovo </li>
-              <li> Bacon </li>
-              <li> Salsicha </li>
+              <li class="ingredientes"> Pão </li>
+              <li class="ingredientes"> Carne </li>
+              <li class="ingredientes"> Queijo </li>
+              <li class="ingredientes"> Ovo </li>
+              <li class="ingredientes"> Bacon </li>
+              <li class="ingredientes"> Salsicha </li>
 
             </ul>
 
@@ -124,9 +151,9 @@
 
             <ul>
 
-              <li> Pão </li>
-              <li> Carne </li>
-              <li> Queijo </li>
+              <li class="ingredientes"> Pão </li>
+              <li class="ingredientes"> Carne </li>
+              <li class="ingredientes"> Queijo </li>
 
             </ul>
 
@@ -149,8 +176,20 @@
       </form>
 
     </section>
-
+-->
     <footer>
+
+      <h2> Contato </h2>
+      <p> Ligue para (21) 98765-4321 ou mande um e-mail para contato@bitburger.com </p>
+      <p> Nos siga nas redes sociais: </p>
+
+      <div>
+
+        <a href="http://www.facebook.com/bitburger"> <img src="images/facebook.svg" alt="Facebook" width="30"> </a>
+        <a href="http://www.twitter.com/bitburger"> <img src="images/twitter.svg" alt="Twitter" width="30"> </a>
+        <a href="http://www.instagram.com/bitburger"> <img src="images/instagram.svg" alt="Instagram" width="30"> </a>
+
+      </div>
 
       <h6> © Gabriel Bitencourt - 2017 </h6>
 
