--- a/site.html
+++ b/site.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt">
 
   <head>
 
     <meta charset="utf-8">
     <title> BitBurger </title>
+
     <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Noticia+Text:700">
     <link rel="icon" href="images/hamburger.png">
+
+
 
   </head>
 
