--- a/site.html
+++ b/site.html
@@ -55,7 +55,7 @@
       <div class="titulocontainer">
 
         <h1 class="subtitulo"> Nossas lojas </h1>
-        <h4 class="legenda"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. </h4>
+        <h4 class="legenda"> Sempre por perto para matar sua fome. </h4>
 
       </div>
 
