* navbar and header layout fixed

--- a/site.html
+++ b/site.html
@@ -10,9 +10,6 @@
 
     <link rel="stylesheet" type="text/css" href="style.css">
 
-
-
-
   </head>
 
   <body>
@@ -33,9 +30,13 @@
 
 
     <header class="header">
-      <br><br><br><br>
-      <h1> BITBURGER™</h1>
-      <h4> "A melhor hamburgeria do Rio de Janeiro!" - Minha mãe</h4>
+
+      <div>
+
+        <h1> BITBURGER™</h1>
+        <h4> "A melhor hamburgeria do Rio de Janeiro!" - Minha mãe</h4>
+
+      </div>
 
     </header>
 
