--- a/site.html
+++ b/site.html
@@ -4,27 +4,53 @@
   <head>
 
     <meta charset="utf-8">
-    <title> BitBurger </title>
+    <title> Bitburger </title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Noticia+Text:700">
     <link rel="icon" href="images/hamburger.png">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+
+    <!-- jQuery library -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+
+    <!-- Latest compiled JavaScript -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+
+    <!-- My own CSS -->
     <link rel="stylesheet" type="text/css" href="style.css">
+
+    <!-- Scrollspy -->
+    <script> $('body').scrollspy({ target: '#scrollspy' }) </script>
 
   </head>
 
-  <body>
+  <body data-spy="scroll" data-target="#scrollspy">
 
     <nav>
 
-      <ul class="menu">
+      <div class="container">
 
-        <li> <a> Home </a> </li>
-        <li> <a> Cardápio </a> </li>
-        <li> <img src="images/hamburger.svg" alt="Hamburgueria Logo" width="50"> </li>
-        <li> <a> Nossas Lojas </a> </li>
-        <li> <a> Contato </a> </li>
+        <div class="row">
 
-      </ul>
+          <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+
+            <ul class="menu">
+
+              <li> <a href="#"> Home </a> </li>
+              <li> <a href="#cardapio"> Cardápio </a> </li>
+              <li> <img src="images/hamburger.svg" alt="Hamburgueria Logo" width="50"> </li>
+              <li> <a href="#lojas"> Nossas Lojas </a> </li>
+              <li> <a href="#contato"> Contato </a> </li>
+
+            </ul>
+
+          </div>
+
+        </div>
+
+      </div>
 
     </nav>
 
@@ -40,7 +66,7 @@
 
     </header>
 
-    <section class="cardapio">
+    <section class="cardapio" id="cardapio">
 
       <div class="titulocontainer">
 
@@ -49,10 +75,69 @@
 
       </div>
 
+      <div class="container">
+
+        <div class="row">
+
+          <div class="col-sm-6 col-md-4">
+
+            <div class="thumbnail">
+
+              <img src="images/foodiesfeed.com_argentinian-beef-steak-sandwich.jpg" alt="Hamburger 010110">
+
+              <div class="caption">
+
+                <h3> Hamburger 010110 </h3>
+                <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
+
+              </div>
+
+            </div>
+
+          </div>
+
+          <div class="col-sm-6 col-md-4">
+
+            <div class="thumbnail">
+
+              <img src="images/foodiesfeed.com_argentinian-beef-steak-sandwich.jpg" alt="Hamburger 010110">
+
+              <div class="caption">
+
+                <h3> Hamburger 010110 </h3>
+                <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
+
+              </div>
+
+            </div>
+
+          </div>
+
+          <div class="col-sm-6 col-md-4">
+
+            <div class="thumbnail">
+
+              <img src="images/foodiesfeed.com_argentinian-beef-steak-sandwich.jpg" alt="Hamburger 010110">
+
+              <div class="caption">
+
+                <h3> Hamburger 010110 </h3>
+                <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
+
+              </div>
+
+            </div>
+
+          </div>
+
+        </div>
+
+      </div>
+
 
     </section>
 
-    <section class="lojas">
+    <section class="lojas" id="lojas">
 
       <div class="titulocontainer">
 
@@ -63,7 +148,7 @@
 
     </section>
 
-    <footer>
+    <footer id="contato">
 
       <h2> Contato </h2>
       <p> Ligue para (21) 98765-4321 ou mande um e-mail para contato@bitburger.com </p>
