+ conteudo do cardapio e das lojas

--- a/site.html
+++ b/site.html
@@ -75,64 +75,47 @@
 
       </div>
 
-      <div class="container">
+      <ul class="table">
 
-        <div class="row">
+        <li>
 
-          <div class="col-sm-6 col-md-4">
+          <img src="images/burger.jpg" alt="" width="80%">
+          <div>
 
-            <div class="thumbnail">
-
-              <img src="images/foodiesfeed.com_argentinian-beef-steak-sandwich.jpg" alt="Hamburger 010110">
-
-              <div class="caption">
-
-                <h3> Hamburger 010110 </h3>
-                <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
-
-              </div>
-
-            </div>
+            <h4> Hamburger 010110 </h4>
+            <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
 
           </div>
 
-          <div class="col-sm-6 col-md-4">
+        </li>
 
-            <div class="thumbnail">
+        <li>
 
-              <img src="images/foodiesfeed.com_argentinian-beef-steak-sandwich.jpg" alt="Hamburger 010110">
+          <img src="images/burger.jpg" alt="" width="80%">
+          <div>
 
-              <div class="caption">
-
-                <h3> Hamburger 010110 </h3>
-                <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
-
-              </div>
-
-            </div>
+            <h4> Hamburger 011001 </h4>
+            <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
 
           </div>
 
-          <div class="col-sm-6 col-md-4">
+        </li>
 
-            <div class="thumbnail">
+        <li>
 
-              <img src="images/foodiesfeed.com_argentinian-beef-steak-sandwich.jpg" alt="Hamburger 010110">
+          <img src="images/burger.jpg" alt="" width="80%">
+          <div>
 
-              <div class="caption">
-
-                <h3> Hamburger 010110 </h3>
-                <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
-
-              </div>
-
-            </div>
+            <h4> Hamburger 001011 </h4>
+            <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
 
           </div>
 
-        </div>
+        </li>
 
-      </div>
+
+
+      </ul>
 
 
     </section>
@@ -145,6 +128,48 @@
         <h4 class="legenda"> Sempre por perto para matar sua fome. </h4>
 
       </div>
+
+      <ul class="table">
+
+        <li>
+
+          <img src="images/store.jpg" alt="" width="80%">
+          <div>
+
+            <h4> Bitburger Laranjeiras </h4>
+            <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
+
+          </div>
+
+        </li>
+
+        <li>
+
+          <img src="images/store.jpg" alt="" width="80%">
+          <div>
+
+            <h4> Bitburger Centro </h4>
+            <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
+
+          </div>
+
+        </li>
+
+        <li>
+
+          <img src="images/store.jpg" alt="" width="80%">
+          <div>
+
+            <h4> Bitburger Fundão </h4>
+            <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
+
+          </div>
+
+        </li>
+
+
+
+      </ul>
 
     </section>
 
