* pequenas correcoes de layout

--- a/site.html
+++ b/site.html
@@ -60,7 +60,7 @@
       <div>
 
         <h1> BITBURGER™</h1>
-        <h4> "A melhor hamburgeria do Rio de Janeiro!" - Minha mãe</h4>
+        <h4> "A melhor hamburgueria do Rio de Janeiro!" - Minha mãe</h4>
 
       </div>
 
